--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<div class="page-content">
+  <h1>
+    {{ page.category }}
+  </h1>
+</div>
+
 {% for post in site.posts %}
   {% if post.categories contains page.category %}
     {% include featured-post.html %}
