--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <h3 class="site-title">
-    <a href="{{ site.github.url }}/"><img src="{{ site.github.url }}/assets/img/logo.png" alt="logo" /> {{ site.title }}</a>
+    <a href="{{ site.github.url }}/"><img src="{{ site.github.url }}/assets/img/logo.png" width="64" height="64" alt="logo" /> {{ site.title }}</a>
   </h3>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
