--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,10 +1,12 @@
 /* Begin Custom CSS */
 
 .iconcent {
+  float: left;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   grid-gap: 10px;
+  margin-left: 15px;
 }
 
 .sitelogo {
