--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -16,9 +16,10 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
+  overflow: auto; /* added so code blocks scroll horizontally instead of wrap */
+  /* white-space: pre-wrap; */
+  /* word-break: break-all; */
+  /* word-wrap: break-word; */
   background-color: #f5f5f5;
 }
 pre code {
