--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} | {{ site.description }}
+      <!-- {{ site.title }} | {{ site.description }} -->
+      {{ site.title }} | Home
     {% else %}
       {{ page.title }} | {{ site.title }}
     {% endif %}
