--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,8 @@
 ---
 ---
 
-$base-font-family: 'Roboto', sans-serif;
+// $base-font-family: 'Roboto', sans-serif;
+$base-font-family: 'Source Code Pro', sans-serif;
 $body-font-family: 'Roboto', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
 
